[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Main/GameServer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/PlayerVerification.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Main/StateProcessing.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Main/Map.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Maps/ServerMap.tscn" type="PackedScene" id=6]

[node name="Server" type="Node"]
script = ExtResource( 1 )

[node name="PlayerVerification" type="Node" parent="."]
script = ExtResource( 3 )

[node name="VerificationExpiration" type="Timer" parent="PlayerVerification"]
wait_time = 10.0
autostart = true

[node name="TokenExpiration" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="StateProcessing" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Map" type="Node" parent="."]
script = ExtResource( 5 )

[node name="ServerMap" parent="." instance=ExtResource( 6 )]

[node name="Island" parent="ServerMap" index="0"]
visible = true

[node name="Grass" parent="ServerMap" index="1"]
visible = true

[node name="Terrain" parent="ServerMap" index="2"]
visible = true

[node name="Flowers" parent="ServerMap" index="3"]
visible = true

[node name="Houses" parent="ServerMap" index="4"]
visible = true

[connection signal="timeout" from="PlayerVerification/VerificationExpiration" to="PlayerVerification" method="_on_VerificationExpiration_timeout"]
[connection signal="timeout" from="TokenExpiration" to="." method="_on_TokenExpiration_timeout"]

[editable path="ServerMap"]
